fix(projects): fixes layout bug that caused margin

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -14,8 +14,8 @@
   border-radius: 5px;
   font-weight: 300;
   margin: 1em;
-  width: 100%;
   max-width: 300px;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
